--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -5,8 +5,8 @@ h1 {
 
   &.shrikhand {
     font-family: Shrikhand, sans-serif;
-    padding: 20px 0 20px 20px;
     font-weight: normal;
+    padding: 20px 0 20px 20px;
   }
 }
 
@@ -14,64 +14,63 @@ h2 {
   display: block;
   font-size: 1.25rem;
   font-weight: bold;
-  margin: 0;
   line-height: 1.2;
+  margin: 0;
 }
 
 h3 {
-  font-size: 0.875rem;
+  font-size: .875rem;
   font-weight: bold;
 }
 
 //Header section
 header {
-  display: flex;
-  max-width: $wrapper;
-  margin: auto;
-  flex-flow: wrap;
-  flex-direction: column;
   align-items: center;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-flow: wrap;
+  margin: auto;
+  max-width: $wrapper;
   padding-top: 10px;
+  position: relative;
 
   .header-left {
-    width: 375px;
-    background-color: darken($grey-color,5);
+    background-color: darken($grey-color, 5);
     margin-bottom: 20px;
+    width: 375px;
   }
 
   .search-location {
-    display: flex;
-    //background-color: #eaeaea;
     border-top: 2px solid #e0e0e0;
+    display: flex;
 
     .icon-wrapper {
       padding: 8px 10px;
     }
 
     .input-field {
-      flex: 1 0 0%;
+      flex: 1 0 0;
 
       input {
-        border: none;
         background-color: transparent;
+        border: 0;
         padding: 15px 10px;
         width: 100%;
 
         &[type="text"]::placeholder {
+          color: #333;
           font-size: 1rem;
           font-weight: bold;
-          color: #333333;
         }
       }
     }
   }
 
   .back-btn {
-    position: absolute;
-    left: 20px;
-    top: 30px;
     display: block;
+    left: 20px;
+    position: absolute;
+    top: 30px;
   }
 
   .cover-img {
@@ -81,34 +80,34 @@ header {
 
     img {
       height: 100%;
-      width: 100%;
       object-fit: cover;
+      width: 100%;
     }
   }
 }
 
 //Main section
 main {
-  max-width: $wrapper;
-  margin-left: auto;
-  margin-right: auto;
   display: flex;
   flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: $wrapper;
 
 }
 
 .menu main {
-  z-index: 999;
-  margin-top: -40px;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
+  margin-top: -40px;
+  z-index: 999;
 }
 
 .reserve {
-  text-align: center;
-  padding: 30px 10px;
   flex: 0 0 100%;
   margin: 0 -15px;
+  padding: 30px 10px;
+  text-align: center;
 
   h1 {
     margin-bottom: 15px;
@@ -117,68 +116,69 @@ main {
 
   h2 {
     color: #888;
-    font-weight: normal;
     font-size: 1.125rem;
+    font-weight: normal;
   }
 
   hgroup {
     margin-bottom: 35px;
   }
+
   .button1 {
     margin-bottom: 30px;
   }
 }
 
 aside {
-  padding: 30px 10px;
   flex: 0 0 100%;
+  padding: 30px 10px;
 
   h1 {
-    width: 100%;
     margin-bottom: 10px;
     margin-left: 5px;
+    width: 100%;
   }
 
   .select {
+    align-content: space-between;
     display: flex;
-    flex-flow: nowrap;
     flex-direction: row;
+    flex-flow: nowrap;
     padding: 15px;
     position: relative;
-    align-content: space-between;
     width: 100%;
   }
 
   .step-button {
-    margin-bottom: 20px;
-    padding: 25px 15px;
     background-color: $grey-color;
-    flex: 1 0 auto;
-    margin-right: 15px;
-    margin-left: 15px;
     border-radius: 30px;
     box-shadow: $btn1-shadow;
+    flex: 1 0 auto;
+    margin-bottom: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 25px 15px;
     position: relative;
 
 
     .circle-number {
       background-color: $primary;
-      display: block;
-      position: absolute;
-      width: 25px;
-      height: 25px;
-      text-align: center;
       border-radius: 100%;
-      color: white;
+      color: $white-color;
+      display: block;
       font-weight: bold;
+      height: 25px;
       left: -12px;
       line-height: 1.67;
+      position: absolute;
+      text-align: center;
+      width: 25px;
     }
 
     .icon {
+      display: inline-block;
       margin: 0 15px;
       min-width: 30px;
-      display: inline-block;
 
       i {
         font-size: 20px;
@@ -201,18 +201,18 @@ aside {
 }
 
 .home main > section {
-  flex: 1 0 0%;
+  flex: 1 0 0;
 }
 
 //Cards css
 .cards {
   display: flex;
-  flex-wrap: wrap;
   flex-flow: row wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-  padding: 15px;
+  flex-wrap: wrap;
   height: 100%;
+  margin-left: -15px;
+  margin-right: -15px;
+  padding: 15px;
 
   //Title cards section
   h1 {
@@ -222,33 +222,33 @@ aside {
 
   //One card css
   .card {
-    position: relative;
+    background-color: $white-color;
+    box-shadow: $card-shadow;
     display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: white;
-    box-shadow: 2px 2px 10px 2px #e0e0e0;
     flex: 1 0 25%;
+    flex-direction: column;
     margin: 15px;
+    min-width: 0;
+    position: relative;
+    word-wrap: break-word;
 
     //Imaged card
     &.card-img {
       border-radius: 15px;
 
       .card-img-header {
-        position: relative;
         max-height: 200px;
+        position: relative;
 
         .img-btn-left {
-          position: absolute;
-          z-index: 999;
           background-color: $tertiary;
-          right: 10px;
-          top: 10px;
-          padding: 3px 10px;
           color: darken($tertiary, 35);
           font-weight: bold;
+          padding: 3px 10px;
+          position: absolute;
+          right: 10px;
+          top: 10px;
+          z-index: 999;
         }
       }
 
@@ -262,8 +262,8 @@ aside {
 
       .card-content {
         display: flex;
-        flex-wrap: nowrap;
         flex-direction: row;
+        flex-wrap: nowrap;
         padding: 10px;
         width: 100%;
 
@@ -286,14 +286,14 @@ aside {
 }
 
 .home .card {
-  flex: 1 0 0%;
+  flex: 1 0 0;
 }
 
 //Menu cards CSS
 .menu {
   .restaurant-title {
-    width: 100%;
     position: relative;
+    width: 100%;
 
     .like {
       position: absolute;
@@ -305,9 +305,8 @@ aside {
   .cards {
     background-color: transparent;
     flex-flow: row wrap;
-    margin-right: 0;
     margin-left: 0;
-
+    margin-right: 0;
 
     h2.sub-title {
       font-size: 1rem;
@@ -315,11 +314,11 @@ aside {
       width: 100%;
 
       &::after {
-        border-bottom: 2px solid #99e2d0;
-        content: "";
+        border-bottom: 2px solid $tertiary;
+        content: '';
         display: block;
-        width: 40px;
         padding-top: 3px;
+        width: 40px;
       }
     }
 
@@ -328,80 +327,84 @@ aside {
       cursor: pointer;
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
       flex-wrap: nowrap;
+      justify-content: space-between;
       overflow: hidden;
 
-
       hgroup {
-        padding: 10px;
         flex: 1;
+        overflow: hidden;
+        padding: 10px;
         text-overflow: ellipsis;
         white-space: nowrap;
-        overflow: hidden;
       }
 
       h2 {
         font-size: 1.125rem;
-        margin: 0 0 5px 0;
+        margin: 0 0 5px;
+        overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
-        overflow: hidden;
       }
 
       h3 {
+        color: gray;
         font-size: 1rem;
         font-weight: normal;
-        color: gray;
+        overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
-        overflow: hidden;
       }
 
       .caption-check-box {
-        position: relative;
-        border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
+        border-top-right-radius: 15px;
         display: none;
+        position: relative;
 
         i {
-          font-size: 24px;
           color: #fff;
+          font-size: 24px;
           transform: rotate(360deg);
         }
       }
 
       .price {
-        font-weight: bold;
-        font-size: 1.125rem;
-        text-align: right;
-        padding-right: 10px;
-        display: flex;
         align-items: center;
+        display: flex;
+        font-size: 1.125rem;
+        font-weight: bold;
         justify-content: flex-end;
+        padding-right: 10px;
+        text-align: right;
       }
     }
   }
 
   //Order button
   .order {
-    text-align: center;
     margin-bottom: 20px;
+    text-align: center;
   }
 }
 
 footer {
+  background-color: #333;
+  color: $white-color;
   padding: 20px;
-  background-color: #333333;
   text-align: center;
 
-  #footer {
-    max-width: 1680px;
+
+  a {
+    color: $white-color;
+  }
+
+  #f-container {
     margin: auto;
+    max-width: 100%;
   }
 
   .logo {
-
     img {
       filter: invert(1);
     }
@@ -420,9 +423,5 @@ footer {
     i {
       min-width: 30px;
     }
-  }
-
-  a {
-    color: #fff !important;
   }
 }
