--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -17,3 +17,6 @@ $btn-padding: 15px 30px;
 //Animations
 $card-delay: 0.3s;
 $spiner-bg-bk: rgba(10, 10, 10, 0.60);
+
+//Cards
+$card-shadow: 2px 2px 10px 2px #e0e0e0;
