--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,21 +79,24 @@ time,
 mark,
 audio,
 video {
-  margin: 0;
-  padding: 0;
   border: 0;
   font: inherit;
   font-size: 16px;
-  vertical-align: baseline;
+  margin: 0;
+  outline-style: none;
+  padding: 0;
   text-decoration: none;
+  vertical-align: baseline; }
+
+*:focus,
+*:visited,
+*:focus-within,
+*:focus-visible,
+*:hover {
+  border-color: transparent;
+  box-shadow: none;
   outline-style: none; }
 
-*:focus, *:visited, *:focus-within, *:focus-visible, *:hover {
-  outline-style: none;
-  box-shadow: none;
-  border-color: transparent; }
-
-/* HTML5 display-role reset for older browsers */
 article,
 aside,
 details,
@@ -114,23 +117,22 @@ ul {
 
 strong {
   font-size: 19px;
-  padding-right: 15px;
-  font-weight: bold; }
+  font-weight: bold;
+  padding-right: 15px; }
 
 *,
 ::after,
 ::before {
   box-sizing: border-box; }
 
-/* Base */
 body {
-  margin: 0;
-  font-family: Roboto, sans-serif;
-  font-size: 0.875rem;
-  line-height: 1.5;
-  text-align: left;
   background-color: white;
-  color: #333; }
+  color: #333;
+  font-family: Roboto, sans-serif;
+  font-size: .875rem;
+  line-height: 1.5;
+  margin: 0;
+  text-align: left; }
 
 a {
   color: #333; }
