--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -79,23 +79,27 @@ time,
 mark,
 audio,
 video {
-  margin: 0;
-  padding: 0;
   border: 0;
   font: inherit;
   font-size: 16px;
-  vertical-align: baseline;
+  margin: 0;
+  outline-style: none;
+  padding: 0;
   text-decoration: none;
-  outline-style: none;
+  vertical-align: baseline;
 }
 
-*:focus, *:visited, *:focus-within, *:focus-visible, *:hover {
-  outline-style: none;
-  box-shadow: none;
+*:focus,
+*:visited,
+*:focus-within,
+*:focus-visible,
+*:hover {
   border-color: transparent;
+  box-shadow: none;
+  outline-style: none;
 }
 
-/* HTML5 display-role reset for older browsers */
+// HTML5 display-role reset for older browsers
 article,
 aside,
 details,
@@ -118,8 +122,8 @@ ul {
 
 strong {
   font-size: 19px;
-  padding-right: 15px;
   font-weight: bold;
+  padding-right: 15px;
 }
 
 *,
@@ -128,15 +132,15 @@ strong {
   box-sizing: border-box;
 }
 
-/* Base */
+//Base
 body {
-  margin: 0;
-  font-family: Roboto, sans-serif;
-  font-size: 0.875rem;
-  line-height: 1.5;
-  text-align: left;
   background-color: white;
   color: #333;
+  font-family: Roboto, sans-serif;
+  font-size: .875rem;
+  line-height: 1.5;
+  margin: 0;
+  text-align: left;
 }
 
 a {
