--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -27,8 +27,7 @@ h3 {
 header {
   align-items: center;
   display: flex;
-  flex-direction: column;
-  flex-flow: wrap;
+  flex-flow: column wrap;
   margin: auto;
   max-width: $wrapper;
   padding-top: 10px;
@@ -220,7 +219,7 @@ aside {
 
   //Title cards section
   h1 {
-    margin: 15px 0 15px 15px;
+    padding: 15px 0 15px 15px;
     width: 100%;
   }
 
