--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,7 +233,7 @@ header {
 
 main {
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: column nowrap;
   margin-left: auto;
   margin-right: auto;
   max-width: 1440px; }
@@ -250,12 +250,12 @@ main {
   padding: 30px 10px;
   text-align: center; }
   .reserve h1 {
-    margin-bottom: 15px;
-    padding: 0 50px; }
+    margin: 15px; }
   .reserve h2 {
     color: #888;
     font-size: 1.125rem;
-    font-weight: normal; }
+    font-weight: normal;
+    margin: 20px 15px; }
   .reserve hgroup {
     margin-bottom: 35px; }
   .reserve .button1 {
