--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -92,7 +92,7 @@ header {
 //Main section
 main {
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: column nowrap;
   margin-left: auto;
   margin-right: auto;
   max-width: $wrapper;
@@ -113,14 +113,15 @@ main {
   text-align: center;
 
   h1 {
-    margin-bottom: 15px;
-    padding: 0 50px;
+    margin: 15px;
   }
 
   h2 {
     color: #888;
     font-size: 1.125rem;
     font-weight: normal;
+    margin: 20px 15px;
+
   }
 
   hgroup {
